fix word wrap

--- a/client/src/components/ListItem.scss
+++ b/client/src/components/ListItem.scss
@@ -73,6 +73,7 @@
 			}
 
 			& > .desc {
+				word-wrap: break-word;
 				font-size: 1.3rem;
 				line-height: 1.4;
 				margin-bottom: 1.2rem;
